# template

./: CMakeLists.txt  run.py  run.sh
conan/: conanfile.txt
src/: main.cpp
